--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <div class="column right">
                     <div class="text">I'm Nr Akash and I'm a <span class="typing-2"></span></div>
                     <p>i am Nr Akash I am pursuing diplamo 3rd Year (CSE) & I have a 1 year of experience in web application penetration testing and Ethical hacking & I know C,HTML,CSS,SQL,Bash</p>
-                        <a href="images/RESUME.JPG" download="Download CV">
+                        <a href="RESUME.JPG" download="Download CV">
                           <img src="RESUME.JPG" alt="Download CV" width="104" height="142">
                         </a>
                 </div>
@@ -169,10 +169,10 @@
                 <div class="column left">
                     <div class="text">Get in Touch</div> 
                     <a href="https://www.linkedin.com/in/nr-akash-379a90202"></a>
-                        <img alt="Qries" src="images/linkedin.jpg"
+                        <img alt="Qries" src="linkedin.jpg"
                         width="40" height="40">
                         <a href="https://instgram.com/__over__now"></a>
-                            <img alt="Qries" src="images/900px-Instagram_icon.png"
+                            <img alt="Qries" src="900px-Instagram_icon.png"
                             width="40" height="40">
                             <div class="column right">
                     <div class="icons">
