--- a/index2.html
+++ b/index2.html
@@ -24,78 +24,78 @@
             </div>
         </div>
     </section>
-    <img align="center" src="images/cs map.jpg" width="1520" height="700">
+    <img align="center" src="cs map.jpg" width="1520" height="700">
     <section>
         <section class="Certificates" id="Certificates">
             <div class="max-width">
                 <h1 class="title">Bug Bounty</h1>
                 <div class="carousel owl-carousel">                    
-                            <img src="images/BUG BOUNTY HUNTING WITH BURPSUITE.jpg" height="600px" width="1000px">
+                            <img src="BUG BOUNTY HUNTING WITH BURPSUITE.jpg" height="600px" width="1000px">
                  </div>
                  <h1 class="title">quantum computing</h1>
                 <div class="carousel owl-carousel">                    
-                            <img src="images/introduction to quantum computing.jpg" height="600px" width="1000px">
+                            <img src="introduction to quantum computing.jpg" height="600px" width="1000px">
                  </div>
                  <h1 class="title">Cybercrimes Against Teenagers</h1>
                  <div class="carousel owl-carousel">                    
-                             <img src="images/AKASH's internship certificate_00_00.jpg" height="1000px" width="1000px">
+                             <img src="AKASH's internship certificate_00_00.jpg" height="1000px" width="1000px">
                   </div>
                   <h1 class="title">cybersecurity & ethical hacking & web penetration testing</h1>
                  <div class="carousel owl-carousel">                    
-                             <img src="images/cyber security & web penetration testing & ethical Hacking (certificate).PNG" height="600px" width="1000px">
+                             <img src="cyber security & web penetration testing & ethical Hacking (certificate).PNG" height="600px" width="1000px">
                   </div>
                   <h1 class="title">recoin in cybersecurity</h1>
                  <div class="carousel owl-carousel">                    
-                             <img src="images/recoin in cyber security.jpg" height="600px" width="1000px">
+                             <img src="recoin in cyber security.jpg" height="600px" width="1000px">
                   </div><br>
                   <p></p>
                   <h1 class="title">cybersecurity awareness training</h1>
                  <div class="carousel owl-carousel"> 
                      <br>                   
-                             <img src="images/cs awareness training.JPG" height="600px" width="1000px">
+                             <img src="cs awareness training.JPG" height="600px" width="1000px">
                   </div><br>
                   <p></p>
                   <h1 class="title" tex-align="center">Android app development</h1>
                   <br>
                   <div class="carousel owl-carousel"> 
                       <br>
-                              <img src="images/android app development.JPG" height="600px" width="1000px">
+                              <img src="android app development.JPG" height="600px" width="1000px">
                    </div>
                    <br>
                    <h1 class="title">Andriod app development</h1>
                    <div class="carousel owl-carousel">   
                        <br>                 
-                               <img src="images/android app development(workshop).JPG" height="600px" width="1000px">
+                               <img src="android app development(workshop).JPG" height="600px" width="1000px">
                     </div>
                     <br>
                     <h1 class="title">python and Flash framework</h1>
                    <div class="carousel owl-carousel">   
                        <br>                 
-                               <img src="images/python and flash framework.JPG" height="600px" width="1000px">
+                               <img src="python and flash framework.JPG" height="600px" width="1000px">
                     </div>
                     <br>
                     <h1 class="title">Python project</h1>
                     <div class="carousel owl-carousel">  
                         <br>                  
-                                <img src="images/python project.JPG" height="600px" width="1000px">
+                                <img src="python project.JPG" height="600px" width="1000px">
                      </div>
                      <br>
                      <h1 class="title">Ethical Hacking</h1>
                     <div class="carousel owl-carousel">      
                         <br>              
-                                <img src="images/Ethical hacking.JPG" height="600px" width="1000px">
+                                <img src="Ethical hacking.JPG" height="600px" width="1000px">
                      </div>
                      <br>
                      <h1 class="title">Ethical Hacking</h1>
                     <div class="carousel owl-carousel">      
                         <br>              
-                                <img src="images/0001.jpg" height="1200px" width="1000px">
+                                <img src="0001.jpg" height="1200px" width="1000px">
                      </div>
                      <br>
                      <h1 class="title">Python for DataScience</h1>
                     <div class="carousel owl-carousel">   
                         <br>                 
-                                <img src="images/Python for Datascience.JPG" height="600px" width="1000px">
+                                <img src="Python for Datascience.JPG" height="600px" width="1000px">
                      </div>
             </div>
     </section>
